--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,4 +6,7 @@ jobs:
       - image: themattrix/tox
     steps:
       - checkout
+      - run:
+        name: install-deps
+        command: sudo apt-get install lzma
       - run: tox
