--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,5 +8,5 @@ jobs:
       - checkout
       - run:
         name: install-deps
-        command: sudo apt-get install lzma
+        command: apt-get install lzma
       - run: tox
