--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,5 @@ jobs:
       - run:
           command: echo 'sudo apt-get install lzma'
       - run:
-          command: sudo apt-get install lzma
+          command: apt-get install lzma
       - run: tox
