--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,5 @@ jobs:
       - run:
           command: echo 'sudo apt-get install lzma'
       - run:
-          command: apt-get install liblzma-dev
+          command: apt-get install liblzma
       - run: tox
